--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="images/Felyne Chef.jpg" alt="Felyne Chef"></td>
+      <td><img src="Images/Felyne Chef.jpg" alt="Felyne Chef"></td>
       <td>
         <h1>AbakorGen</h1>
         <p>Registered Hunter <em>(legit)</em></p>
